# plotting

./: .gitignore  pyproject.toml
plotting/: branch_hist.py  commit_compare.py  commit_log_with_timestamps.py  log_pipeline.py  memtrace_plot.py  plot_bench_times.py  plot_with_timestamps.py  scatter_plot_from_stdin.py  talk.py  test.py  thesis.py
tests/: test_plotting.py
